button alignment fixex in Navigation,templates and in all button in Topnavbar

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -120,7 +120,7 @@ select,
 textarea {
   color: inherit;
   font: inherit;
-  margin: 0; }
+  margin-bottom:22px; }
 
 button {
   overflow: visible; }
@@ -1084,6 +1084,7 @@ input,
 button,
 select,
 textarea {
+  min-width:130px;
   font-family: inherit;
   font-size: inherit;
   line-height: inherit; }
@@ -2876,6 +2877,7 @@ select[multiple].input-lg,
     font-size: 12px; } }
 
 .btn {
+  margin-top:0px;
   display: inline-block;
   margin-bottom: 0;
   font-weight: normal;
@@ -2955,7 +2957,8 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .btn-primary:hover {
     color: #fff;
     background-color: #217ee8;
-    border-color: #156dd0; }
+    border-color: #156dd0;
+    padding-bottom:13px	}
   .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
     color: #fff;
     background-color: #217ee8;
@@ -8029,7 +8032,7 @@ span.required {
 
 div.chosen-container.chosen-container-single {
   min-width: 220px !important;
-  max-width: 244px !important; }
+  max-width: 260px !important; }
 
 .chosen-container-single.input-xs .chosen-single {
   height: 24px;
